# ELF_Baobaodui

./: .gitattributes  .gitignore  .gitmodules  HANDOFF.md  README.md  authorized_cards.example.json  main.py  start_all_ros_nodes.sh  start_current_usable_nodes.sh  stop_all_ros_nodes.sh  tmp_pn532_getfw_raw.py  tmp_pn532_spi_diag.py
USB/: README.md  capture_usb_camera_5.py
battery/: ELF_READ_STM32_CHARGER_STATUS.md  README.md  find_stm32_twowire_pins.py  probe_stm32_twowire_matrix.py  read_stm32_charger_status.py  read_stm32_gated_presence.py  read_stm32_pb0_presence.py  read_stm32_twowire_presence.py  sample_charger_onewire_status.py  scan_gpio_rising_edges.py
charging/: test_buzzer.py  test_lock.py
data/: README.md
docs/: AGENTS.md  DEBUG_NFC.md  DEVELOPER_GUIDE.md  ELF 2_Product spec.md  (+8 more)
ros2_ws/src/smart_cabinet_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/smart_cabinet_interfaces/action/: AuthenticateFace.action  ReadNfcCard.action  RunInventory.action
ros2_ws/src/smart_cabinet_interfaces/srv/: Beep.srv  OpenLock.srv  RequestInventory.srv  RequestManualFan.srv  RequestOpen.srv  RequestTempUnlock.srv  SetFan.srv  UpdateEnvThresholds.srv
ros2_ws/src/smart_cabinet_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/smart_cabinet_nodes/resource/: smart_cabinet_nodes
ros2_ws/src/smart_cabinet_nodes/smart_cabinet_nodes/: __init__.py  actuator_node.py  battery_node.py  battery_reader.py  cabinet_logic_node.py  common.py  console_monitor.py  env_node.py  face_node.py  nfc_action_client.py  nfc_node.py  scenario_player.py  ui_node.py  vision_node.py
(+128 files in other folders)
