<?xml version="1.0"?>
<package format="3">
  <name>smart_cabinet_nodes</name>
  <version>0.1.0</version>
  <description>ROS2 Python nodes for the smart tool cabinet.</description>
  <maintainer email="elf@example.com">elf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>smart_cabinet_interfaces</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
